fix: update broken style on style.css and media queries

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1147,7 +1147,7 @@ input[type=range]::-webkit-slider-thumb:active{
 
 @media screen and (max-width:1139px){
 
-    .update-text h1{
+    .update-text h2{
         font-size: 400%;
     }
 
@@ -1212,7 +1212,7 @@ input[type=range]::-webkit-slider-thumb:active{
         font-size: .9rem;
     }
     
-    .update-text h1 {
+    .update-text h2 {
         font-size: 350%;
         text-align: center;
     }
@@ -1287,7 +1287,7 @@ input[type=range]::-webkit-slider-thumb:active{
         font-size: 100px;
     }
 
-    .update-text h1 {
+    .update-text h2 {
         font-size: 250%;
 
     }
@@ -1395,7 +1395,7 @@ input[type=range]::-webkit-slider-thumb:active{
     .section-header{
         font-size: 100%;
     }
-    .update-text h1{
+    .update-text h2{
         font-size: 170%;
     }
 
